give labels on input fields a color, and make sure they are visible enough. Fixes lots of things, and fixes #4

--- a/src/assets/scss/_buttons.scss
+++ b/src/assets/scss/_buttons.scss
@@ -1,6 +1,7 @@
 @mixin buttonstyle() {
 	background-color: $color_accent;
 	color: white;
+	font-weight: bold;
 	padding: 12px 24px;
 	text-decoration: none;
 	border-radius: 6px;
