--- a/src/assets/scss/_inputs.scss
+++ b/src/assets/scss/_inputs.scss
@@ -2,7 +2,6 @@
 	background-color: white;
 	color: black;
 	border-radius: 6px;
-	min-width: 322px;
 	display: inline-block;
 	@include font-size(2.6);
 }
